<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string translatable="false" name="app_name">WAID (What AmI Doing!)</string>
    <string translatable="false" name="session_name_in_cookie">PLAY_SESSION</string>
    <string name="auth_success_message">ADDED AUTHENTICATION TOKEN TO SESSISON</string>
    <string name="new_auth_success_message">USER CREATED - ADDED AUTHENTICATION TOKEN TO SESSISON</string>
    <string name="app_url">http://www.whatamidoing.info</string>
    <string name="login_url">http://www.whatamidoing.info:9000/registerLogin</string>
    <string name="findallinvites_url">http://www.whatamidoing.info:9000/findAllInvites</string>
    <string name="getInviteList_url">http://www.whatamidoing.info:9000/getInviteList</string>
    <string name="send_invite_url">http://www.whatamidoing.info:9000/invite</string>
    <string name="send_invite_twitter_url">http://www.whatamidoing.info:9000/inviteTwitter</string>
    <string name="send_invite_facebook_url">http://www.whatamidoing.info:9000/inviteFacebook</string>
    <string name="send_invite_linkedin_url">http://www.whatamidoing.info:9000/inviteLinkedin</string>
    <string name="invalidate_token_url">http://www.whatamidoing.info:9000/invalidateToken</string>
    <string name="publish_url">ws://www.whatamidoing.info:12345/publishVideo</string>
    <string name="share_location_url">http://www.whatamidoing.info:9000/shareLocation</string>
    <string name="group_jid_url">http://www.whatamidoing.info:9000/getGroupJid</string>
    <string name="invite_location_url">http://www.whatamidoing.info/whatamidoing?invitedId</string>
    <string name="total_watching_url">http://www.whatamidoing.info:9000/usersWatching?token</string>
    <string name="xmpp_host">whatamidoing.info</string>
    <string name="xmpp_domain">whatamidoing</string>
    <string name="xmpp_ip">5.79.24.141</string>
    <string name="xmpp_port">5222</string>
    <string name="unable_to_connect_to_chat">Unable to start chat service</string>
    <string name="xmpp_default_timeout">1000</string>
    <string name="xmmp_roomjid_url">http://www.whatamidoing.info:9000/getRoomJid?token</string>
    <string name="xmpp_participant_nick_delimeter">-DIDLY-SQUAT-</string>
    <string name="chat_message_header">Discussion</string>
    <string name="chat_participant_header">Participants</string>
    <string name="chat_service_stopped">Chat Stopped - Try Again</string>
    <string name="forgotten_password_sign_in_register">Send Me a New Password</string>
    <string name="select_camera">Select Camera</string>
    <string name="start_video">Start Camera</string>
    <string name="stop_video">Stop Camera</string>
    <string name="find_invite">Share Moment</string>
    <string name="share_location">Share Location</string>    
    <string name="start_transmission">Start Sharing</string>
    <string name="end_transmission">Stop Sharing</string>
    <string name="view_sharers">Whoes Accepted!</string>
    <string name="welcome_message">Share on Facebook, Twitter, LinkedIn or by Email</string>
    <string name="invited_dialog_message">Below is who is watching</string>
    <string name="invite_progress_fetch_invites">Fetching Previous Invites&#8230;</string>
    <string name="invite_dialog_message">Enter an email below or Select from previous</string>
    <string name="invite_button">Click To Invite</string>
    <string name="send_message_button">Chat</string>
    <string name="cancel">Cancel</string>
    <string name="invite_previous_message">Select All Previous</string>
    <string name="server_connection_problems">Problems connecting to server. Try again later</string>
    <string name="unable_to_share">Unable To Share</string>
    <string name="damn">damn!!!</string>
    <string name="number_of_times_to_check_websocket_status">5</string>
    <string name="unable_to_connect">Server Problems</string>
    <string name="unable_to_send_invites">Unable to Send Invites</string>
    <string name="unable_to_send_location">Unable to Send Location</string>
    <string name="success_sent_invites">Invites has been successfully sent</string>
    <string name="success_sent_location">Location has been successfully sent</string>
    <string name="nice">Nice</string>
    <string name="able_to_send_invites">Invites Sent</string>
    <string name="able_to_send_location">Location Sent</string>
    <string name="sharing_ticker">Sharing Stream</string>
    <string name="what_am_i_doing_sharing_notification">What am I Doing - Sharing</string>
    <string name="app_title">What Am I Doing</string>
    <string name="share_video">Sharing..</string>
    <string name="sharing_stopped">No Longer Sharing</string>
    <string name="sharing_service_stopped">Sharing Service Stopped</string>
    <string name="sharing_connection_closed">Sharing connection Problems</string>
    <string name="sharing_service_connection_closed">Sharing Connection Closed Try Again!!</string>
    <string name="info">Info</string>
    <string name="camera_not_started">You need to "start camera" and "start sharing" before you can invite</string>
    <string name="can_not_share_location">You need to "start camera" and "start sharing" before sharing your location</string>
    <string name="can_not_see_whoes_watching">You need to "start camera" and "start sharing" before you can view whoes watching</string>
    <string name="video_not_started">You need to Start Recording Before You can Share</string>
    <string name="video_not_started_view_sharers">You need to start recording and share the moment</string>
    <string name="invited_progress_fetch_invites">Getting whoes Watching!</string>
    <string name="invited_accepted">Accepted</string>
    <string name="invited_not_accepted">Not Accepted</string>
    <string name="forgotten_passowrd_link">click here to request a new password <a href="http://www.whatamidoing.info/forgottenPassword">To Request For New Password </a></string>
    <string name="reset_password_message">Request For New Password</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share_on_facebook">Share On Facebook</string>
    <string name="share_using_email">Share Using Email</string>
    <string name="send_tweet">Send Tweet To Twitter</string>
    <string name="linkedin_pin_button">Update Status</string>
    <string name="linkedin_pin_label">Enter the pin acquired from Twitter</string>
    <string name="linkedin_pin_needs_to_be_number">LinkedIn Pin is Invalid -- Needs to be a number</string>
    <string name="linkedin_problems">Problems accessing LinkedIn : Make sure networking is available</string>
    <string name="linkedin_status_update_problem">Unable to update linkedin status</string>
    <string name="linkedin_status_update_success">Linkedin status updated</string>
    <string name="linkedin_auth_dialog">LinkedIn Authentication Pin</string>
    <string name="twitter_pin_button">Tweet</string>
    <string name="twitter_pin_label">Enter the pin acquired from Twitter</string>
    <string name="twitter_pin_needs_to_be_number">Twitter Pin is Invalid -- Needs to be a number</string>
    <string name="twitter_problems">Problems accessing Twitter : Make sure networking is available</string>
    <string name="twitter_auth_dialog">Twitter Authentication Pin</string>
    <string name="facebook_menu_names">Share On Facebook</string>
    <string name="facebook_feed_dialog_description">I am using WAID - Click on the link below to see what I am doing</string>
    <string name="facebook_feed_dialog_name">WAID</string>
    <string name="facebook_feed_dialog_picture">http://www.whatamidoing.info/assets/images/icon.png</string>
    <string name="facebook_feed_dialong_display">page</string>
    <string name="twitter_menu_names">Send Tweet To Twitter</string>
    <string name="linkedin_menu_names">Share on linkedin</string>
    <string name="email_menu_names">Share Using Email</string>
    <string name="logout_menu_names">Logout</string>
    <string name="linkedin_share_comment">WAID (What Am I Doing) Used to share live streams</string>
    <string name="linkedin_share_title">Click On The Link Below to view what I am doing</string>
    <string name="total_views_message">Viewers</string>

     
    <!-- - FACEBOOK specific -->
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="app_id">735949386449847</string>
    <string name="settings">SETTINGS</string>
   	<string name="error_dialog_title">Error</string>
	<string name="error_dialog_button_text">OK</string>
    
</resources>