<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatamidoing="http://schemas.android.com/apk/res-auto">
    
    
    <item android:id="@+id/linkedin_menu_item"
          android:icon="@drawable/linkedin"
          android:title="@string/linkedin_menu_names"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/facebook_menu_item"
          android:icon="@drawable/facebook"
          android:title="@string/facebook_menu_names"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/twitter_menu_item"
          android:icon="@drawable/twitter"
          android:title="@string/twitter_menu_names"
          android:showAsAction="ifRoom"/>
        
    
    <item android:id="@+id/email_menu_item"
          android:icon="@drawable/mail"
          android:title="@string/email_menu_names"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/send_location_menu_item"
          android:title="@string/share_location"
          android:showAsAction="never"/>
    
    
    
    <item android:id="@+id/whos_accepted_menu_item"
          android:title="@string/view_sharers"
          android:showAsAction="never"/>
    
    <item android:id="@+id/logout_menu_item"
          android:icon="@drawable/logout"
          android:title="@string/logout_menu_names"
          android:showAsAction="never"/>
    
    
    
</menu>
