<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical" >
    
       
     <LinearLayout android:id="@+id/sharing_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center" android:gravity="center_horizontal"
		android:orientation="vertical" android:visibility="gone">

		<ProgressBar style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginBottom="8dp" />

		<TextView android:id="@+id/invite_status_message"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginBottom="16dp" 
			android:text="@string/share_video"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
	</LinearLayout>
	
<GridLayout 
    android:id="@+id/video_display"
    android:layout_gravity="fill_vertical|fill_horizontal"
    android:layout_weight="1.1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="7"
    android:columnCount="3"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:keepScreenOn="true"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:rowOrderPreserved="true"
    android:columnOrderPreserved="true"
    tools:context=".LiveVideoStreamActivity" >
  
    <!-- -ROW 0 -->
     <Spinner
        android:id="@+id/selectCamera"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/select_camera"
        android:layout_marginBottom="10dp"
		/>

        <LinearLayout
         android:id="@+id/momemts_frame"
          android:layout_row="0"
          android:layout_column="1"
          android:layout_rowSpan="6"
          android:padding="4dp"
          android:orientation="horizontal"
           android:layout_gravity="fill_vertical"
          android:background="@drawable/moments_frame">

       </LinearLayout>
     
         <Button  style="@style/btnStyleArsenic" 
             android:id="@+id/start_video"
    		 android:layout_row="1"
    		 android:layout_column="0"
             android:text="@string/start_video"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:onClick="startVideo"
             android:clickable="true" >
         </Button>
    
      <Button  style="@style/btnStyleArsenic" 
             android:layout_row="2"
             android:layout_column="0"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="4dp"
             android:layout_marginBottom="4dp"
             android:layout_marginRight="4dp"
             android:text="@string/start_transmission"
             android:onClick="startTransmission"
             android:clickable="true"
             android:id="@+id/start_transmission"  ></Button>
      
       <Button
           style="@style/btnStyleArsenic"
           android:id="@+id/locationButton"
           android:layout_row="3"
           android:layout_column="0"
           android:layout_marginLeft="4dp"
           android:layout_marginTop="10dp"
           android:clickable="true"
           android:text="@string/share_location" />
          
        <Button style="@style/btnStyleArsenic"
             android:layout_row="4"
             android:layout_column="0" 
             android:id="@+id/viewSharers"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:clickable="true"
            android:text="@string/view_sharers" /> 

        <TextView 
            style="@style/btnStyleArsenic"
             android:layout_column="0"
              android:layout_gravity="top"
             android:id="@+id/totalWatchers"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             />
        
        
     	<Button  style="@style/btnStyleArsenic" 
    		 android:layout_column="1"
    		 android:layout_columnSpan="2"
    		 android:text="@string/send_message_button"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:clickable="true"
             android:onClick="displayChat"
             android:id="@+id/send_messge" >
         </Button>
          
       
      
        
</GridLayout>
</LinearLayout>
</ScrollView>